--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,8 @@ dependencies {
 
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation 'com.github.apl-devs:appintro:v4.2.3'
+
+    testImplementation 'org.mockito:mockito-core:2.12.0'
+
+    implementation 'com.facebook.stetho:stetho:1.5.0'
 }
