--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,7 @@ dependencies {
     implementation 'com.facebook.stetho:stetho:1.5.0'
 
     testImplementation "org.robolectric:robolectric:3.7.1"
+
+    implementation 'com.google.android.gms:play-services-auth:11.8.0'
+
 }
