--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
         <activity android:name=".ui.login.LoginActivity">
 
         </activity>
-        <activity android:name=".ui.home.HomeActivity"
-            android:theme="@android:style/Theme.Holo.Dialog">
+        <activity android:name=".ui.home.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
