--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", "URL_SHORTENER_API", "\""+getAPIKey()+"\""
     }
     buildTypes {
         release {
@@ -35,6 +36,11 @@ configurations.all { config ->
             }
         }
     }
+}
+def getAPIKey() {
+    Properties properties = new Properties()
+    properties.load(project.rootProject.file('local.properties').newDataInputStream())
+    return properties.getProperty("URL_SHORTENER_API");
 }
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -67,4 +73,13 @@ dependencies {
     implementation 'com.android.support:design:27.1.0'
 
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
+
+    testImplementation 'pl.pragmatists:JUnitParams:1.1.1'
+
+    implementation "org.jetbrains.anko:anko-design:$anko_version"
+
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.6'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
 }
