--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,9 @@ cache:
  - $HOME/.gradle/wrapper/
 env:
   global:
-   - ANDROID_API_LEVEL=25
+   - ANDROID_API_LEVEL=27
    - EMULATOR_API_LEVEL=21
-   - ANDROID_BUILD_TOOLS_VERSION=25.0.2
+   - ANDROID_BUILD_TOOLS_VERSION=27.0.3
    - ANDROID_ABI=google_apis/armeabi-v7a
    - ADB_INSTALL_TIMEOUT=20 # minutes (2 minutes by default)
 
@@ -21,8 +21,8 @@ android:
   components:
     - tools
     - platform-tools
-    - build-tools-25.0.2
-    - android-25
+    - build-tools-27.0.3
+    - android-27
 
     # Google Play Services
     - extra-google-google_play_services
@@ -50,10 +50,7 @@ before_install:
           - mkdir "$ANDROID_HOME/licenses" || true
           - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
           - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
-          - chmod +settingsOpen gradlew
-after_success:
- - chmod +settingsOpen ./upload-gh-pages.sh
- - ./upload-apk.sh
+          - chmod +x gradlew
 branches:
         only:
                 - master
