--- a/.travis.yml
+++ b/.travis.yml
@@ -12,17 +12,19 @@ cache:
 env:
   global:
    - ANDROID_API_LEVEL=27
-   - EMULATOR_API_LEVEL=27
+   - EMULATOR_API_LEVEL=22
    - ANDROID_BUILD_TOOLS_VERSION=27.0.3
-   - ANDROID_ABI=google_apis/armeabi-v7a
+   - ANDROID_ABI=armeabi-v7a
+   - ANDROID_TAG=google_apis
    - ADB_INSTALL_TIMEOUT=20 # minutes (2 minutes by default)
 
 android:
   components:
     - tools
     - platform-tools
-    - build-tools-27.0.3
-    - android-27
+    - tools
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+    - android-$ANDROID_API_LEVEL
 
     # Google Play Services
     - extra-google-google_play_services
@@ -37,7 +39,7 @@ android:
     - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
     - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
 before_script:
-  - echo no | android create avd --force -n test -t android-27 --abi google_apis/armeabi-v7a
+  - echo no | android create avd --force -n test -t "android-"$EMULATOR_API_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
