fix:Travis.ci script

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ android:
     - tools
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     - android-$ANDROID_API_LEVEL
+    - android-$EMULATOR_API_LEVEL
 
     # Google Play Services
     - extra-google-google_play_services
