--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ android:
 
     - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
     - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
-before_script:
+#before_script:
 #  - echo no | android create avd --force -n test -t "android-"$EMULATOR_API_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
 #  - emulator -avd test -no-skin -no-audio -no-window &
 #  - android-wait-for-emulator
