--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,8 @@ before_install:
           - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
           - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
           - chmod +x gradlew
+          - echo "sdk.dir=$ANDROID_HOME" > local.properties
+          - echo "URL_SHORTENER_API=abc" > local.properties
 branches:
         only:
                 - master
