--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ script:
 #        - ./gradlew build
         - ./gradlew clean
         - ./gradlew assembleDebug
-        - ./gradlew assembleDebugAndroidTest
+#        - ./gradlew assembleDebugAndroidTest
 before_install:
           - mkdir "$ANDROID_HOME/licenses" || true
           - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
