--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,7 @@ script:
 #        - ./gradlew build
         - ./gradlew clean
         - ./gradlew assembleDebug
+        - ./gradlew test
 #        - ./gradlew assembleDebugAndroidTest
 before_install:
           - mkdir "$ANDROID_HOME/licenses" || true
