--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 sudo: false
 language: android
 jdk: oraclejdk8
-#before_cache:
-# - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
-# - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+before_cache:
+ - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+ - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 
 cache:
  directories:
