--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,6 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
-
 android {
     compileSdkVersion 27
     defaultConfig {
@@ -30,7 +29,16 @@ android {
     lintOptions {
         abortOnError false
     }
+
 }
+repositories {
+    jcenter()
+}
+
+configurations {
+    ktlint
+}
+
 configurations.all { config ->
     if (config.name.contains('UnitTest')) {
         config.resolutionStrategy.eachDependency { details ->
@@ -45,6 +53,7 @@ def getAPIKey() {
     properties.load(project.rootProject.file('local.properties').newDataInputStream())
     return properties.getProperty("URL_SHORTENER_API");
 }
+
 //lintOptions {
 //    abortOnError false
 //}
@@ -88,4 +97,15 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+
+    // ktlint
+    ktlint "com.github.shyiko:ktlint:0.15.0"
 }
+task ktlint(type: JavaExec, group: "verification") {
+    description = "Check Kotlin code style."
+    classpath = configurations.ktlint
+    main = "com.github.shyiko.ktlint.Main"
+    args "src/**/*.kt"
+    //args "--reporter=checkstyle,output=${buildDir}/ktlint.xml"
+}
+check.dependsOn ktlint
