--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
 
-    - addon-google_apis-google-$ANDROID_API_LEVEL
+#    - addon-google_apis-google-$ANDROID_API_LEVEL
 #    - addon-google_apis-google-$EMULATOR_API_LEVEL
 
 #    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
