--- a/.travis.yml
+++ b/.travis.yml
@@ -32,17 +32,6 @@ android:
     - extra-android-support
     - extra-google-m2repository
     - extra-android-m2repository
-
-#    - addon-google_apis-google-$ANDROID_API_LEVEL
-#    - addon-google_apis-google-$EMULATOR_API_LEVEL
-
-#    - sys-img-armeabi-v7a-addon-google_apis-google-$ANDROID_API_LEVEL
-#    - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
-#before_script:
-#  - echo no | android create avd --force -n test -t "android-"$EMULATOR_API_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
-#  - emulator -avd test -no-skin -no-audio -no-window &
-#  - android-wait-for-emulator
-#  - adb shell input keyevent 82 &
 script:
 #        - ./gradlew build
         - ./gradlew clean build
@@ -56,7 +45,7 @@ before_install:
           - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
           - chmod +x gradlew
           - echo "sdk.dir=$ANDROID_HOME" > local.properties
-          - echo "URL_SHORTENER_API=abc" > local.properties
+          - echo "URL_SHORTENER_API=RANDOM_KEY" > local.properties
 branches:
         only:
                 - master
