--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,6 +100,16 @@ dependencies {
 
     // ktlint
     ktlint "com.github.shyiko:ktlint:0.15.0"
+
+    //Room Database
+    implementation "android.arch.persistence.room:runtime:$roomVersion"
+
+    annotationProcessor "android.arch.persistence.room:compiler:$roomVersion"
+    kapt "android.arch.persistence.room:compiler:$roomVersion"
+
+    androidTestImplementation "android.arch.persistence.room:testing:$roomVersion"
+
+    implementation "android.arch.persistence.room:rxjava2:$roomVersion"
 }
 task ktlint(type: JavaExec, group: "verification") {
     description = "Check Kotlin code style."
