--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.21'
-    ext.anko_version='0.10.4'
+    ext{
+        kotlin_version = '1.2.21'
+        anko_version = '0.10.4'
+        roomVersion = '1.1.0-alpha3'
+    }
     repositories {
         google()
         jcenter()
