--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,7 @@ configurations.all { config ->
 def getAPIKey() {
     Properties properties = new Properties()
     properties.load(project.rootProject.file('local.properties').newDataInputStream())
-    return properties.getProperty("URL_SHORTENER_API");
+    return properties.getProperty("URL_SHORTENER_API")
 }
 
 //lintOptions {
@@ -108,6 +108,8 @@ dependencies {
     kapt "android.arch.persistence.room:compiler:$roomVersion"
 
     androidTestImplementation "android.arch.persistence.room:testing:$roomVersion"
+    androidTestImplementation "android.arch.core:core-testing:$arch_core"
+    implementation 'com.google.code.gson:gson:2.8.0'
 
     implementation "android.arch.persistence.room:rxjava2:$roomVersion"
 }
