--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         kotlin_version = '1.2.21'
         anko_version = '0.10.4'
         roomVersion = '1.1.0-alpha3'
+        arch_core = '1.1.0'
     }
     repositories {
         google()
