--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,11 +8,11 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.example.theseus.urlshortener"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'com.github.tmurakami.dexopener.DexOpenerAndroidJUnitRunner'
         buildConfigField "String", "URL_SHORTENER_API", "\""+getAPIKey()+"\""
     }
     buildTypes {
@@ -77,8 +77,9 @@ dependencies {
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation 'com.github.apl-devs:appintro:v4.2.3'
 
-    testImplementation 'org.mockito:mockito-core:2.12.0'
-
+    testImplementation "org.mockito:mockito-core:$mockito_version"
+    androidTestCompile ("org.mockito:mockito-android:$mockito_version")
+    androidTestCompile 'com.github.tmurakami:dexopener:0.10.1'
     implementation 'com.facebook.stetho:stetho:1.5.0'
 
     testImplementation "org.robolectric:robolectric:3.7.1"
