--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         anko_version = '0.10.4'
         roomVersion = '1.1.0-alpha3'
         arch_core = '1.1.0'
+        mockito_version = '2.7.1'
     }
     repositories {
         google()
