--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,3 +126,9 @@ task ktlint(type: JavaExec, group: "verification") {
     //args "--reporter=checkstyle,output=${buildDir}/ktlint.xml"
 }
 check.dependsOn ktlint
+task ktlintFormat(type: JavaExec, group: "formatting") {
+    description = "Fix Kotlin code style deviations."
+    classpath = configurations.ktlint
+    main = "com.github.shyiko.ktlint.Main"
+    args "-F", "src/**/*.kt"
+}
